# aquascope

./: .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml
.github/workflows/: release.yml
crates/aquascope/: Cargo.toml
crates/aquascope_front/: Cargo.toml
crates/aquascope_workspace_utils/: Cargo.toml
crates/mdbook-aquascope/: build.rs
crates/mdbook-aquascope/src/: main.rs  preprocessor.rs
frontend/: pnpm-lock.yaml  typedoc.json
