[workspace]
members = [ "crates/*" ]
exclude = [ "files", "crates/aquascope_serve" ]
resolver = "2"

[workspace.dependencies]
serde = { version = "=1.0.149", features = ["derive"] }

# Make snapshot testing faster
[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
